--- a/web/templates/layout/app.html.eex
+++ b/web/templates/layout/app.html.eex
@@ -27,7 +27,7 @@
     <div class="container-fluid small-margins">
       <p class="centered">
         <small>
-          &copy;2016 by Tomek "Grych" Gryszkiewicz <<a href="mailto:grych@tg.pl?subject=ELPH">grych@tg.pl</a>>, <a href="http://www.tg.pl">www.tg.pl</a>. Find the <a href="github">source code on Github</a>. 
+          &copy;2016 by Tomek "Grych" Gryszkiewicz <<a href="mailto:grych@tg.pl?subject=ELPH">grych@tg.pl</a>>, <a href="http://www.tg.pl">www.tg.pl</a>. Find the <a href="https://github.com/grych/elph">source code on Github</a>. 
         </small>
       </p>
     </div>
